# EWU-CS

./: .gitignore
240 - C and Unix/: README.md
240 - C and Unix/Lab5/: CMakeLists.txt  main.c
240 - C and Unix/Lab7/: findMax.c
240 - C and Unix/hw2/: cscd240_hw2.docx  hw2_student.c
240 - C and Unix/hw34_student/: smallFile.pgm
260 - Architecture & Organization/: IO.s  Midterm.s  PracticeMidterm.asm  StackPointer.s  WeirdThingFromClass.s  array.s
300 - Data Structures/Assignment2/: sort_results.csv
300 - Data Structures/Assignment3/: Parser.java  input.txt
300 - Data Structures/Assignment6/: HashTable.java  output_file.txt
305 - C++/HW1/: grade_tester_approach
305 - C++/HW2/: CMakeLists.txt  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  intersection_tester.cpp
305 - C++/HW3/: Color.cpp  cblob_tester_output.txt  colorblob_tester.cpp
305 - C++/HW4/: Graph.h  Point3D.cpp
305 - C++/HW5/: main.cpp  output.txt
305 - C++/HW6/: InfoNode.h  main.cpp
316 - Practical Problem Solving/7SegmentDisplay/: output.txt
316 - Practical Problem Solving/Assignment1/: input.txt  output.txt
316 - Practical Problem Solving/Assignment1.1/: Trip.java  input.txt  output.txt
316 - Practical Problem Solving/Assignment2/: input.txt
316 - Practical Problem Solving/Assignment5/: input.txt
340 - OS/Lab3/: CMakeLists.txt  Makefile  cscd340Lab3.c  cscd340Lab3val.txt  simpleRun.txt
340 - OS/Lab3/input/: movies.txt  weirdMovies.txt
340 - OS/Lab3/linkedlist/: linkedList.c  linkedList.h  listUtils.c  listUtils.h
340 - OS/Lab3/movies/: actor.h  movie.c  movie.h
340 - OS/Lab3/myInt/: myInt.c  myInt.h
340 - OS/Lab3/utils/: fileUtils.c  fileUtils.h  myFileUtils.c  myUtils.c
340 - OS/Lab8/: .msshrc  .msshrc_history  CMakeLists.txt  Makefile  cscd340Lab8.c  tester.mssh  valgrind.txt
340 - OS/Lab8/command/: command.c  command.h
340 - OS/Lab8/linkedlist/: linkedList.c  linkedList.h  listUtils.c  listUtils.h  requiredIncludes.h
340 - OS/Lab8/pipes/: pipes.c  pipes.h
340 - OS/Lab8/process/: process.c  process.h
340 - OS/Lab8/redirects/: redirect.c  redirect.h  redirects.c  redirects.h
340 - OS/Lab8/tokenize/: makeArgs.c  makeArgs.h
340 - OS/Lab8/utils/: fileUtils.c  myFileUtils.c  myFileUtils.h  utils.c  utils.h
CSCD-240 - C and Unix/: CMakeLists.txt
CSCD-260 - Architecture & Organization/: ALU.v  IO.asm  Midterm.asm  Recursion.s  StackPointer.asm  StackPointer.s  TaskSwitcher.s  array.asm
CSCD-305 - C++/HW5/: CMakeLists.txt
CSCD-305 - C++/HW5/Shapes/: Shape3D.h
CSCD-305 - C++/HW5/Shapes/2DShapes/: Circle.cpp  Circle.h  Rectangle.h  Triangle.cpp
CSCD-305 - C++/HW5/Shapes/3DShapes/: Box.cpp  Box.h  Cylinder.cpp  Cylinder.h  Sphere.cpp
CSCD-378 - Web Development/: global.css  index.html  landingpage.html  main.js
CSCD-396 - Graphics/HW1 - Intro to OpenGL/: CMakeLists.txt  Triangle.cpp  triangles.frag
HW3/: CMakeLists.txt
(+822 files in other folders)
